k8s/hello-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-${ROUTE}
  labels:
    app: hello
    route: ${ROUTE}
    version: ${VERSION}
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
        route: ${ROUTE}
        version: ${VERSION}
      annotations:
        kubectl.kubernetes.io/restartedAt: "${TIMESTAMP}"
    spec:
      containers:
        - name: hello
          image: ${IMAGE_TAG}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 80
