k8s/istio-virtual-service-traffic-control.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
  namespace: kubecon-demo
spec:
  hosts:
    - "hello.local"
  gateways:
    - hello-gateway
  http:
    - route:
        - destination:
            host: hello
            subset: v1
          weight: 100
        - destination:
            host: hello
            subset: v2
          weight: 0
