k8s/istio-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
  namespace: kubecon-demo
spec:
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: hello
            subset: v1
          weight: 90
        - destination:
            host: hello
            subset: v2
          weight: 10
